--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ body {
 
 .header {
     height: 95vh;
-    background-image: url('assets/eddy.jpg');
+    background-image: url(assets/eddy.jpg);
     background-size: cover;
     background-position: top;
 
