--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.7;
-    color: #444;
+    color: #eee;
 }
 
 .header {
@@ -17,6 +17,44 @@ body {
     background-image: url(assets/eddy.jpg);
     background-size: cover;
     background-position: top;
+    position: relative;
 
     clip-path: polygon(0 0, 100% 0, 100% 95%, 0 85%);
+}
+
+.logo-box {
+    position: absolute;
+    top: 40px;
+    left: 40px;
+}
+
+.logo {
+    height: 35px;
+}
+
+.text-box {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    /* will shift heading-primary to 50% of the width and height */
+    transform: translate(-50%, -50%);
+}
+
+.heading-primary {
+    color: #eee;
+    text-transform: uppercase;
+}
+
+.heading-primary-main {
+    display: block;
+    font-size: 60px;
+    font-weight: 500;
+    letter-spacing: 25px;
+}
+
+.heading-primary-sub {
+    display: block;
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 10px;
 }
